fixed spacing

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -197,6 +197,7 @@ main {
     background: #FFFFFF;
     box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
+    margin-bottom: 130px;
 
     padding: 30px;
 }
@@ -228,7 +229,7 @@ main {
     font-size: 20px;
     line-height: 27px;
     color: #757575;
-    margin-bottom: 10px;
+
 
 
 }
@@ -238,6 +239,7 @@ main {
 
     color: #757575;
     line-height: 28px;
+    margin-top: 20px;
 
 }
 
@@ -245,4 +247,11 @@ main {
 .resume-item{
     margin-bottom: 30px;
     margin-top: 30px;
+    /* margin-right: 71px; */
+}
+
+
+.resume-title{
+
+    margin-top: 113px;
 }
